[gd_scene load_steps=2 format=2]

[ext_resource path="res://Enemies/WaveSystem.gd" type="Script" id=1]

[node name="WaveSystem" type="Node2D"]
script = ExtResource( 1 )

[node name="RestTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="Spawnpoints" type="Node2D" parent="."]

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0.607843, 1, 1 )
margin_left = 103.0
margin_top = 81.0
margin_right = 143.0
margin_bottom = 95.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="RestTimer" to="." method="_on_RestTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
